--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -5,13 +5,19 @@
 </head>
 <body>
 
-  <header>
-    <%- include('../partials/header.ejs') %>
-  </header>
+  <%- include('../partials/header.ejs') %>
 
   <main>
+    <% if (flash) { %>
+      <%- include('../partials/flash.ejs', {flash: flash}) %>
+    <% } %>
+
     <!-- Hero -->
-    
+      <% if (user) { %>
+        <h1 class="pt-16">
+          hello <%= user.name %>
+        </h1>
+      <% } %>
   </main>
   
   <footer>
