--- a/views/pages/try-premium.ejs
+++ b/views/pages/try-premium.ejs
@@ -7,13 +7,11 @@
 
 <body>
 
-  <header>
-    <%- include('../partials/header.ejs') %>
-  </header>
+  <%- include('../partials/header.ejs') %>
 
   <main>
     <!-- Hero -->
-    <div class="hero min-h-screen bg-base-200">
+    <div class="hero min-h-[calc(100vh-4rem)] bg-base-200">
       <div class="hero-content flex-col lg:flex-row-reverse">
         <img src="/images/nyapIcon.png" class="max-w-sm rounded-lg shadow-2xl" />
         <div>
