--- a/views/pages/try-premium.ejs
+++ b/views/pages/try-premium.ejs
@@ -7,24 +7,24 @@
 
 <body>
 
-  <%- include('../partials/header.ejs') %>
+  <%- include('../partials/header-default.ejs') %>
 
-  <main>
-    <!-- Hero -->
-    <div class="hero min-h-[calc(100vh-4rem)] bg-base-200">
-      <div class="hero-content flex-col lg:flex-row-reverse">
-        <img src="/images/nyapIcon.png" class="max-w-sm rounded-lg shadow-2xl" />
-        <div>
-          <h1 class="text-5xl font-bold">Try Premium</h1>
-          <p class="py-6">The benefits are....</p>
+    <main>
+      <!-- Hero -->
+      <div class="hero min-h-[calc(100vh-4rem)] bg-base-200">
+        <div class="hero-content flex-col lg:flex-row-reverse">
+          <img src="/images/nyapIcon.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <div>
+            <h1 class="text-5xl font-bold">Try Premium</h1>
+            <p class="py-6">The benefits are....</p>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
 
-  <footer>
-    <%- include('../partials/footer.ejs') %>
-  </footer>
+    <footer>
+      <%- include('../partials/footer.ejs') %>
+    </footer>
 
 </body>
 
