--- a/views/partials/header-default.ejs
+++ b/views/partials/header-default.ejs
@@ -23,7 +23,7 @@
       </ul>
     </div>
     <div class="navbar-end">
-      <a href="/login" class="btn btn-primary text-base">Start Planning</a>
+      <a href="/dashboard" class="btn btn-primary text-base">Start Planning</a>
     </div>
   </div>
 </header>
