--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,11 +12,10 @@
     <main>
       <div>
         <!-- Hero -->
-        <div class="hero min-h-screen bg-gradient-to-r from-primary to-secondary">
-          <div style="background-image: url(/images/landing-bg.png);"
-            class="hero-overlay opacity-25 bg-no-repeat bg-center bg-cover"></div>
+        <div class="hero min-h-[calc(100vh-4rem)] bg-gradient-to-r from-primary to-secondary">
+          <div class="hero-overlay opacity-25 bg-no-repeat bg-center bg-cover" style="background-image: url(/images/landing-bg.png);"></div>
           <div class="hero-content flex-col lg:flex-row-reverse">
-            <img src="/images/landing-image.png" class="max-w-xl" />
+            <img src="/images/landing-image.png" class="max-w-lg" />
             <div class="max-w-md text-white">
               <h1 class="text-5xl font-bold">LIFE PLAN</h1>
               <p class="py-6 ">The best way to ensure you're living the best time of your life and stress free. Start
