--- a/views/partials/header-login.ejs
+++ b/views/partials/header-login.ejs
@@ -20,9 +20,10 @@
         <li><a href="/#faq" class="text-base">FAQ</a></li>
         <li><a href="/#about" class="text-base">About Us</a></li>
         
-        <% if (user.role === 'free') { %>
+        <!-- TODO: Uncomment later -->
+        <% //if (user.role === 'free') { %>
           <li><a href="/try-premium" class="text-base">Try Premium</a></li>
-        <% } %>
+        <% //} %>
       </ul>
     </div>
     <div class="navbar-end">
