--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Life Plan</title>
+<title>LIFE PLAN</title>
+<link rel="icon" type="image/x-icon" href="/images/life-plan.ico">
 
 <link rel="stylesheet" href="/output.css">
