--- a/views/pages/dashboard/index.ejs
+++ b/views/pages/dashboard/index.ejs
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="lifeplan">
 <head>
-  <%- include('../partials/head'); %>
+  <%- include('../../partials/head'); %>
 </head>
 <body>
 
-  <%- include('../partials/header-login.ejs', {user: user}) %>
+  <%- include('../../partials/header-login.ejs', {user: user}) %>
 
   <main>
     <div class="hero min-h-[calc(100vh-4rem)] bg-gradient-to-r from-primary to-secondary">
       <div class="hero-overlay opacity-25 bg-no-repeat bg-center bg-cover" style="background-image: url(/images/dashboard-bg.png);"></div>
       <div class="hero-content justify-center py-10">
         <div class="grid grid-cols-2 place-items-center gap-6">
-          <div class="flex flex-col gap-6">
-            <div class="text-white">
+          <div class="flex flex-col gap-6 text-white">
+            <div class="">
               <h1 class="grow text-4xl font-bold text-center">Welcome <%= user.name %>!</h1>
               <h2 class="text-xl text-center">25 November 2023</h2>
             </div>
-            <div class="rounded-box glass p-5 text-white">
+            <div class="rounded-box glass p-5 ">
               <!-- <h2 class="text-xl text-center">Click <a href="/dashboard/plan" class="font-semibold">Start Planning</a> to add task</h2> -->
               <h2 class="text-xl font-semibold text-center">Upcoming Tasks</h2>
               <ol class="menu rounded-box">
@@ -59,7 +59,7 @@
             ] %>
 
             <% cards.forEach(card => { %>
-              <%- include('../partials/card-link.ejs', {card: card}) %>
+              <%- include('../../partials/card-link.ejs', {card: card}) %>
             <% }) %>
           </div>
         </div>
@@ -68,7 +68,7 @@
   </main>
   
   <footer>
-    <%- include('../partials/footer.ejs') %>
+    <%- include('../../partials/footer.ejs') %>
   </footer>
 </body>
 </html>
