--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -29,11 +29,11 @@
     <main>
 
       <!-- Hero -->
-      <div class="hero min-h-screen bg-gradient-to-r from-primary to-secondary">
+      <div class="hero min-h-[calc(100vh-4rem)] bg-gradient-to-r from-primary to-secondary">
         <div class="hero-overlay opacity-25 bg-no-repeat bg-center bg-cover"
           style="background-image: url(/images/landing-bg.png);"></div>
         <div class="hero-content flex-col px-12 py-16">
-          <div class="card shrink-0 w-96 shadow-2xl bg-base-100">
+          <div class="card shrink-0 w-96 shadow-2xl bg-white">
             <% if (flash) { %>
               <%- include('../partials/flash.ejs', {flash: flash}) %>
                 <% } %>
