--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer items-center p-4 bg-base-100 text-base-content">
+<footer class="footer items-center p-4 bg-white text-base-content">
   <aside class="items-center grid-flow-col">
     <a href="/"><img src="/images/life-plan-icon.png" alt="Life Plan Logo" class="w-10 h-10"></a>
     <p>Copyright © 2023 - All right reserved</p>
