--- a/views/partials/header-default.ejs
+++ b/views/partials/header-default.ejs
@@ -1,5 +1,5 @@
 <header class="sticky top-0 z-50">
-  <div class="navbar bg-base-100">
+  <div class="navbar bg-white">
     <div class="navbar-start">
       <div class="dropdown">
         <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -7,7 +7,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
           </svg>
         </label>
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-white rounded-box w-52">
           <li><a href="/#faq">FAQ</a></li>
           <li><a href="/#about">About Us</a></li>
           <li><a href="/try-premium">Try Premium</a></li>
