--- a/views/partials/header-login.ejs
+++ b/views/partials/header-login.ejs
@@ -1,5 +1,5 @@
 <header class="sticky top-0 z-50">
-  <div class="navbar bg-base-100">
+  <div class="navbar bg-white">
     <div class="navbar-start">
       <div class="dropdown">
         <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -7,22 +7,29 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
           </svg>
         </label>
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-          <li><a href="/#faq">FAQ</a></li>
-          <li><a href="/#about">About Us</a></li>
-          <li><a href="/try-premium">Try Premium</a></li>
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-white rounded-box w-52">
+          <li><a href="/dashboard" class="text-base">Dashboard</a></li>
+          <li><a href="/dashboard/plan" class="text-base">Start Planning</a></li>
+          <li><a href="/dashboard/schedule" class="text-base">Schedule</a></li>
+          <li><a href="/dashboard/history" class="text-base">History</a></li>
+          <li><a href="/dashboard/Package" class="text-base">Package</a></li>
+
+          <li><a href="/try-premium" class="text-base text-primary font-bold">Try Premium</a></li>
         </ul>
       </div>
       <a href="/"><img src="/images/life-plan-logo.png" class="h-14"></a>
     </div>
     <div class="navbar-center hidden lg:flex">
       <ul class="menu menu-horizontal px-1">
-        <li><a href="/#faq" class="text-base">FAQ</a></li>
-        <li><a href="/#about" class="text-base">About Us</a></li>
+        <li><a href="/dashboard" class="text-base">Dashboard</a></li>
+        <li><a href="/dashboard/plan" class="text-base">Start Planning</a></li>
+        <li><a href="/dashboard/schedule" class="text-base">Schedule</a></li>
+        <li><a href="/dashboard/history" class="text-base">History</a></li>
+        <li><a href="/dashboard/Package" class="text-base">Package</a></li>
         
         <!-- TODO: Uncomment later -->
         <% //if (user.role === 'free') { %>
-          <li><a href="/try-premium" class="text-base">Try Premium</a></li>
+          <li><a href="/try-premium" class="text-base text-primary font-bold">Try Premium</a></li>
         <% //} %>
       </ul>
     </div>
@@ -35,7 +42,7 @@
             <path d="M3,21 h18 C 21,12 3,12 3,21" />
           </svg>
         </label>
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-white rounded-box w-52">
           <!-- <li><a>Profile</a></li>
           <li><a>Settings</a></li> -->
           <li><a href="/logout">Logout</a></li>
