--- a/views/pages/dashboard/plan.ejs
+++ b/views/pages/dashboard/plan.ejs
@@ -54,7 +54,7 @@
                   <label class="label">
                     <span class="label-text">Deadline</span>
                   </label>
-                  <input name="deadline" type="date" min="2023-11-26" class="input input-bordered" required />
+                  <input name="deadline" type="date" min="2023-11-26" max="2023-12-03" class="input input-bordered" required />
                 </div>
               </div>
 
