--- a/views/partials/header-default.ejs
+++ b/views/partials/header-default.ejs
@@ -10,7 +10,7 @@
         <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-white rounded-box w-52">
           <li><a href="/#faq">FAQ</a></li>
           <li><a href="/#about">About Us</a></li>
-          <li><a href="/try-premium">Try Premium</a></li>
+          <li><a href="/try-premium" class="text-primary font-bold">Try Premium</a></li>
         </ul>
       </div>
       <a href="/"><img src="/images/life-plan-logo.png" class="h-14"></a>
@@ -19,7 +19,7 @@
       <ul class="menu menu-horizontal px-1">
         <li><a href="/#faq" class="text-base">FAQ</a></li>
         <li><a href="/#about" class="text-base">About Us</a></li>
-        <li><a href="/try-premium" class="text-base">Try Premium</a></li>
+        <li><a href="/try-premium" class="text-base text-primary font-bold">Try Premium</a></li>
       </ul>
     </div>
     <div class="navbar-end">
