--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,7 +13,7 @@
       <div>
         <!-- Hero -->
         <div class="hero min-h-[calc(100vh-4rem)] bg-gradient-to-r from-primary to-secondary">
-          <div class="hero-overlay opacity-25 bg-no-repeat bg-center bg-cover" style="background-image: url(/images/landing-bg.png);"></div>
+          <div class="hero-overlay opacity-25 bg-bg-center bg-cover bg-fixed" style="background-image: url(/images/landing-bg.png);"></div>
           <div class="hero-content flex-col lg:flex-row-reverse">
             <img src="/images/landing-image.png" class="max-w-lg" />
             <div class="max-w-md text-white">
