--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -30,7 +30,7 @@
 
       <!-- Hero -->
       <div class="hero min-h-[calc(100vh-4rem)] bg-gradient-to-r from-primary to-secondary">
-        <div class="hero-overlay opacity-25 bg-no-repeat bg-center bg-cover"
+        <div class="hero-overlay opacity-25 bg-center bg-cover bg-fixed"
           style="background-image: url(/images/landing-bg.png);"></div>
         <div class="hero-content flex-col px-12 py-16">
           <div class="card shrink-0 w-96 shadow-2xl bg-white">
