--- a/views/pages/dashboard/index.ejs
+++ b/views/pages/dashboard/index.ejs
@@ -9,7 +9,7 @@
 
   <main>
     <div class="hero min-h-[calc(100vh-4rem)] bg-gradient-to-r from-primary to-secondary">
-      <div class="hero-overlay opacity-25 bg-no-repeat bg-center bg-cover" style="background-image: url(/images/dashboard-bg.png);"></div>
+      <div class="hero-overlay opacity-25 bg-top bg-cover bg-fixed" style="background-image: url(/images/dashboard-bg.png);"></div>
       <div class="hero-content justify-center py-10">
         <div class="grid grid-cols-2 place-items-center gap-6">
           <div class="flex flex-col gap-6 text-white">
