--- a/views/pages/dashboard/package.ejs
+++ b/views/pages/dashboard/package.ejs
@@ -12,7 +12,7 @@
     <main>
       <!-- Hero -->
       <div class="hero min-h-[calc(100vh-4rem)] bg-gradient-to-r from-primary to-secondary">
-        <div class="hero-overlay opacity-25 bg-no-repeat bg-center bg-cover"
+        <div class="hero-overlay opacity-25 bg-center bg-cover bg-fixed"
           style="background-image: url(/images/landing-bg.png);"></div>
         <div class="hero-content flex-col lg:flex-row-reverse">
 
@@ -56,7 +56,7 @@
                           d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                           clip-rule="evenodd" />
                       </svg>
-                      Access to older tasks
+                      Access to all features
                     </li>
                     <li class="flex gap-x-3">
                       <svg class="h-6 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor"
