--- a/views/pages/dashboard/plan-detail.ejs
+++ b/views/pages/dashboard/plan-detail.ejs
@@ -13,7 +13,7 @@
       <div class="hero-content flex-row px-12 py-16">
         <div class="card shrink-0 shadow-2xl bg-white">
           <div class="card-body py-6 w-[38rem]">
-            <h2 class="text-2xl text-center col-span-2">Plan <%= id %></h2>
+            <h2 class="text-2xl text-center col-span-2">Plan Detail</h2>
             <div class="grid grid-cols-2 gap-6">
               <div class="grid">
                 <!-- Title -->
@@ -22,7 +22,7 @@
                     <span class="label-text">Title</span>
                   </label>
                   <div class="px-4 py-3 text-base leading-6 border border-gray-300 rounded-lg">
-                    <p>Wash Oyen</p>
+                    <p><%= plan.title %></p>
                   </div>
                 </div>
 
@@ -32,7 +32,11 @@
                     <span class="label-text">Description</span>
                   </label>
                   <div class="px-4 py-3 text-base leading-6 border border-gray-300 rounded-lg">
-                    <p>Wash Oyen and Cimi because they're dirty</p>
+                    <% if (plan.description) { %>
+                      <p><%= plan.description %></p>
+                    <% } else { %>
+                      <p> - </p>
+                    <% } %>
                   </div>
                 </div>
 
@@ -42,7 +46,7 @@
                     <span class="label-text">Duration</span>
                   </label>
                   <div class="px-4 py-3 text-base leading-6 border border-gray-300 rounded-lg">
-                    <p>2 hours 30 minutes</p>
+                    <p><%= plan.duration_hour %> hours <%= plan.duration_minute %> minutes</p>
                   </div>
                 </div>
 
@@ -52,7 +56,7 @@
                     <span class="label-text">Deadline</span>
                   </label>
                   <div class="px-4 py-3 text-base leading-6 border border-gray-300 rounded-lg">
-                    <p>25-November-2023</p>
+                    <p><%= plan.deadline %></p>
                   </div>
                 </div>
               </div>
@@ -62,7 +66,7 @@
                 <div class="label">
                   <p>Impact on your life</p>
                   <div class="w-fit px-4 py-3 text-base leading-6 border border-gray-300 rounded-lg">
-                    <p>3</p>
+                    <p><%= plan.life_impact %></p>
                   </div>
                 </div>
 
@@ -70,7 +74,7 @@
                 <div class="label">
                   <p>Impact on other people</p>
                   <div class="w-fit px-4 py-3 text-base leading-6 border border-gray-300 rounded-lg">
-                    <p>3</p>
+                    <p><%= plan.people_impact %></p>
                   </div>
                 </div>
 
@@ -78,7 +82,7 @@
                 <div class="label">
                   <p>Impact on other activity</p>
                   <div class="w-fit px-4 py-3 text-base leading-6 border border-gray-300 rounded-lg">
-                    <p>3</p>
+                    <p><%= plan.activity_impact %></p>
                   </div>
                 </div>
 
@@ -86,7 +90,7 @@
                 <div class="label">
                   <p>Difficulty</p>
                   <div class="w-fit px-4 py-3 text-base leading-6 border border-gray-300 rounded-lg">
-                    <p>3</p>
+                    <p><%= plan.difficulty %></p>
                   </div>
                 </div>
               </div>
